<resources>
    <string name="app_name">知乎日报（非官方）</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="inner_browser">内置浏览器</string>
    <string name="story_detail">文章详情</string>
    <string name="title_activity_big_image">图片放大页</string>

    <!--navigation-->
    <string name="home">首页</string>
    <string name="bookmark">收藏</string>
    <string name="switch_theme">切换主题</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="username">胡几首</string>
    <string name="sign">他山之石，可以攻玉。</string>
    <string name="settings">设置</string>
    <string name="load_error">加载失败，到“关于”页面给我提交反馈吧。</string>

    <!--activity关于-->
    <string name="version">版本:V1.0.0</string>
    <string name="rate">为应用评分</string>
    <string name="feedback">反馈Bug / 建议</string>
    <string name="donate">捐赠开发者</string>
    <string name="donate_content">支付宝账号将会复制到粘贴板，进入支付宝可直接粘贴完成捐赠，感谢您的支持！</string>
    <string name="donate_account">18580743907</string>
    <string name="sendto">mailto:414682234@qq.com</string>
    <string name="mail_topic">使用反馈与建议</string>
    <string name="device_model">设备型号:</string>
    <string name="sdk_version">SDK版本:</string>
    <string name="no_mail_app">没有找到邮件类App</string>
    <string name="no_app_store_found">没有市场类App</string>
    <string name="no_browser_found">没有安装浏览器</string>
    <string name="author">作者</string>
    <string name="author_name">胡几首</string>
    <string name="author_description">北京,昌平</string>
    <string name="follow_me_on_github">在GitHub关注我</string>
    <string name="follow_me_on_zhihu">在知乎关注我</string>
    <string name="add_friend_wechat">微信加我好友</string>
    <string name="add_friend_wechat_message">微信号码已经复制到剪贴板，打开微信添加好友界面，在输入框长按即可粘贴。</string>
    <string name="wechat_number">微信号：hello414682234</string>
    <string name="add_wechat_number">hello414682234</string>
    <string name="support">支持</string>
    <string name="feedback_description">帮助我改进App</string>
    <string name="coffee">精神我一下</string>
    <string name="coffee_description">如果你认同我的工作，可以请我喝杯咖啡表示支持</string>
    <string name="github_url">https://github.com/NianguoWang</string>
    <string name="zhihu_url">https://www.zhihu.com/people/hu-ji-shou/activities</string>
    <string name="zhihu_account">\@胡几首</string>
    <string name="open_source_license">开源许可</string>
    <string name="easter_egg">彩蛋</string>
    <string name="sure">确定</string>
    <string name="yes">是的</string>
    <!--activity关于 end-->

    <!--settings_preference_fragment-->
    <string name="basic_settings">基本设置</string>
    <string name="no_picture_mode">无图模式</string>
    <string name="no_picture_mode_description">阅读时不再加载图片</string>
    <string name="in_app_browser">使用内置浏览器</string>
    <string name="in_app_browser_description">应用内查看链接</string>
    <string name="time_of_saving_articles">文章保存时间</string>
    <string name="other_settings">其他设置</string>
    <string name="clear_image_cache">清除图片缓存</string>
    <string name="clear_image_cache_successfully">清理成功</string>
    <string name="action_open_in_browser">在浏览器中打开</string>
    <string name="refresh">刷新</string>
    <string name="network_error">网络出小差了，点击重试</string>
    <string name="network_error1">网络出小差了，稍后重试</string>
    <string name="retry">重试</string>
    <string name="action_add_to_bookmarks">添加到收藏夹</string>
    <string name="action_copy_link">复制链接</string>
    <string name="action_copy_text">复制文本</string>
    <string name="action_share_as_text">作为文本分享给好友</string>
    <string name="action_delete_from_bookmarks">取消收藏</string>
    <string name="copy_success">复制成功</string>
    <string name="share_to">分享至</string>
    <string name="bookmark_success">收藏成功</string>
    <string name="bookmark_fail">收藏失败</string>
    <string name="unbookmark_success">取消收藏成功</string>
    <string name="unbookmark_fail">取消收藏失败</string>
    <string name="search_bookmarks">搜索</string>
    <string name="no_bookmark">您还没有收藏过内容呢~~~</string>
    <string name="home_show">首页特别展示</string>
    <string name="title_activity_open_lisence">开源许可</string>

    <!--setting-->

</resources>
